Fix compilation issues and improve the bot's overall functionality
Refactors the bot's compilation process, updates dependencies, and fixes command permissions using shell scripts and code modifications.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 75452050-3cc1-4397-be9a-54fc028fd6f2